[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://GrayTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://GenerateObstacleTexture.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObstacleTexturePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObstacleTextureBurst.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon_tiny.png" type="Texture" id=6]
[ext_resource path="res://ObstacleTextureBlood.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GrayBlocks" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196630, 2, 0, 196655, 2, 0, 196656, 2, 0, 196657, 2, 0, 196658, 2, 0, 196659, 2, 0, 262150, 0, 0, 262191, 2, 0, 262196, 2, 0, 262197, 2, 0, 327686, 0, 0, 327714, 2, 0, 327733, 2, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 458762, 1, 0, 458764, 0, 0, 458778, 1, 0, 524300, 0, 0, 524331, 2, 0, 589841, 2, 0, 589850, 3, 0, 655373, 1, 0, 655382, 1, 0, 655386, 3, 0, 655414, 2, 0, 720922, 3, 0, 720927, 3, 0, 720928, 3, 0, 720941, 2, 0, 720950, 2, 0, 786457, 3, 0, 786458, 3, 0, 786463, 3, 0, 786477, 2, 0, 786478, 2, 0, 786479, 2, 0, 786480, 2, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851993, 3, 0, 851998, 3, 0, 851999, 3, 0, 852016, 2, 0, 852017, 2, 0, 852018, 2, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917529, 3, 0, 917530, 3, 0, 917534, 3, 0, 917554, 2, 0, 917555, 2, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 983091, 2, 0, 983092, 2, 0, 1048582, 1, 0, 1048583, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048628, 2, 0, 1114120, 1, 0, 1114132, 1, 0, 1114150, 1, 0, 1114163, 2, 0, 1114164, 2, 0, 1179657, 1, 0, 1179658, 1, 0, 1179686, 1, 0, 1179690, 2, 0, 1179698, 2, 0, 1179699, 2, 0, 1245194, 1, 0, 1245195, 1, 0, 1245222, 1, 0, 1245233, 2, 0, 1245234, 2, 0, 1310731, 1, 0, 1310732, 1, 0, 1310758, 1, 0, 1310768, 2, 0, 1376268, 1, 0, 1507344, 2, 0, 1638429, 2, 0, 1638455, 3, 0, 1703977, 2, 0, 1703991, 3, 0, 1703992, 3, 0, 1769495, 1, 0, 1769496, 1, 0, 1769497, 1, 0, 1769528, 3, 0, 1769529, 3, 0, 1769530, 3, 0, 1835033, 1, 0, 1900573, 1, 0, 1900579, 1, 0, 1900593, 2, 0, 2031658, 1, 0, 2097164, 2, 0, 2228253, 1, 0 )

[node name="GenerateObstacleTexture" parent="." instance=ExtResource( 3 )]

[node name="ObstacleTexturePlayer" parent="." instance=ExtResource( 4 )]

[node name="ObstacleTextureBurst" parent="." instance=ExtResource( 5 )]
texture = ExtResource( 6 )

[node name="ObstacleTextureBlood" parent="." instance=ExtResource( 7 )]

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 4.16222
margin_top = 10.1083
margin_right = 72.1622
margin_bottom = 50.1083
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI"]
margin_right = 210.0
margin_bottom = 31.0
text = "Left Click to Use Example
Escape Key to Exit Demo"

[node name="Label" type="Label" parent="UI"]
margin_top = 35.0
margin_right = 210.0
margin_bottom = 49.0
text = "Select Obstacle Texture Example"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="UI"]
margin_top = 53.0
margin_right = 210.0
margin_bottom = 73.0
text = "Player"
items = [ "Player", null, false, 0, null, "Burst", null, false, 1, null, "Blood", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}
